y.output
   0  $accept : prog $end

   1  prog : ID BEGIN cuerpo END
   2       | ID cuerpo END
   3       | BEGIN END
   4       | ID BEGIN cuerpo
   5       | ID cuerpo
   6       | BEGIN cuerpo

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentencia_declaracion
  10            | sentencia_ejecucion

  11  sentencia_declaracion : tipo lista_variables ';'
  12                        | tipo lista_variables
  13                        | declaracion_funcion
  14                        | TYPEDEF ID ASIGNACION tipo '[' factor ',' factor ']' ';'
  15                        | TYPEDEF ID ASIGNACION tipo '[' factor ',' factor ';'
  16                        | TYPEDEF ID ASIGNACION tipo factor ',' factor ']' ';'
  17                        | TYPEDEF ID ASIGNACION tipo factor ',' factor ';'
  18                        | TYPEDEF ID ASIGNACION tipo '[' ']' ';'
  19                        | TYPEDEF ASIGNACION tipo '[' factor ',' factor ']' ';'
  20                        | TYPEDEF ID ASIGNACION '[' factor ',' factor ']' ';'
  21                        | TYPEDEF STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'
  22                        | TYPEDEF STRUCT lista_tipos '(' lista_variables ',' ')' ID ';'
  23                        | TYPEDEF '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'
  24                        | TYPEDEF STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ';'

  25  actualizar_ambito : ID

  26  declaracion_funcion : tipo FUN actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion END
  27                      | tipo actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion END
  28                      | tipo FUN '(' parametro ')' BEGIN cuerpo_funcion END
  29                      | tipo FUN actualizar_ambito parametro BEGIN cuerpo_funcion END
  30                      | tipo FUN actualizar_ambito '(' ')' BEGIN cuerpo_funcion END
  31                      | tipo FUN actualizar_ambito '(' parametro ')' cuerpo_funcion END
  32                      | tipo FUN actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion error
  33                      | tipo FUN actualizar_ambito '(' parametro ')' BEGIN error END

  34  cuerpo_funcion : cuerpo_funcion sentencia
  35                 | sentencia

  36  sentencia_ejecucion : asignacion
  37                      | condicion_if
  38                      | sentencia_print
  39                      | sentencia_while
  40                      | invocacion_funcion ';'
  41                      | GOTO ETIQUETA ';'
  42                      | GOTO ETIQUETA
  43                      | GOTO ';'
  44                      | ETIQUETA
  45                      | CML
  46                      | RET '(' expresion ')' ';'
  47                      | RET expresion ';'

  48  sentencia_while : repeat bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'
  49                  | repeat bloque_sentencia_ejecutable WHILE '(' condicion ')'
  50                  | repeat bloque_sentencia_ejecutable WHILE '(' ')' ';'
  51                  | repeat bloque_sentencia_ejecutable WHILE condicion ')' ';'
  52                  | repeat bloque_sentencia_ejecutable WHILE '(' condicion ';'
  53                  | repeat bloque_sentencia_ejecutable WHILE condicion ';'
  54                  | repeat WHILE '(' condicion ')' ';'

  55  repeat : REPEAT

  56  sentencia_print : OUTF '(' CML ')' ';'
  57                  | OUTF '(' expresion ')' ';'
  58                  | OUTF '(' ')' ';'
  59                  | OUTF '(' expresion ')'
  60                  | OUTF '(' CML ')'
  61                  | OUTF CML ';'
  62                  | OUTF expresion ';'
  63                  | OUTF '(' error ')' ';'

  64  parametro : tipo ID
  65            | tipo

  66  invocacion_funcion : ID '(' expresion ')'
  67                     | ID '(' ')'

  68  bloque_sentencia_ejecutable : BEGIN lista_sentencias END

  69  lista_sentencias : lista_sentencias sentencia_ejecucion
  70                   | sentencia_ejecucion

  71  condicion_if : IF '(' condicion ')' THEN cuerpo_then END_IF ';'
  72               | IF '(' condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'
  73               | IF '(' condicion ')' cuerpo_then END_IF ';'
  74               | IF '(' ')' THEN cuerpo_then END_IF ';'
  75               | IF '(' condicion ')' THEN error END_IF ';'
  76               | IF '(' condicion ')' THEN cuerpo_then error
  77               | IF '(' condicion ')' THEN cuerpo_then END_IF
  78               | IF THEN cuerpo_then END_IF error
  79               | IF '(' condicion ')' THEN cuerpo_then cuerpo_else END_IF ';'
  80               | IF '(' condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF
  81               | IF '(' condicion ')' THEN cuerpo_then ELSE END_IF ';'
  82               | IF '(' condicion ')' THEN ELSE cuerpo_else END_IF ';'
  83               | IF condicion THEN cuerpo_then END_IF ';'
  84               | IF '(' condicion THEN cuerpo_then END_IF ';'
  85               | IF condicion ')' THEN cuerpo_then END_IF ';'
  86               | IF '(' condicion THEN cuerpo_then ELSE cuerpo_else END_IF ';'
  87               | IF condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'
  88               | IF condicion THEN cuerpo_then ELSE cuerpo_else END_IF ';'

  89  cuerpo_then : bloque_sentencia_ejecutable
  90              | sentencia_ejecucion

  91  cuerpo_else : bloque_sentencia_ejecutable
  92              | sentencia_ejecucion

  93  condicion : expresion comparador expresion
  94            | expresion error expresion

  95  asignacion : lista_variables ASIGNACION lista_expresiones ';'

  96  expresion : expresion '+' termino
  97            | expresion '-' termino
  98            | expresion '+' '+' termino

  99  $$1 :

 100  expresion : expresion '-' '+' termino $$1
 101            | TOD '(' ')'
 102            | termino

 103  termino : termino '*' factor
 104          | termino '/' factor
 105          | termino '*' '*' factor
 106          | termino '*' '/' factor
 107          | termino '/' '/' factor
 108          | termino '/' '*' factor
 109          | '/' factor
 110          | '*' factor
 111          | TOD '(' expresion ')'
 112          | factor

 113  factor : invocacion_funcion
 114         | ID
 115         | id_compuesta_exp
 116         | LONGINT
 117         | '-' LONGINT
 118         | HEXA
 119         | '-' HEXA
 120         | DOUBLE
 121         | '-' DOUBLE

 122  lista_variables : lista_variables ',' ID
 123                  | lista_variables ',' id_compuesta_var
 124                  | id_compuesta_var
 125                  | ID

 126  id_compuesta_var : ID '.' ID

 127  id_compuesta_exp : ID '.' ID

 128  coma : ','

 129  lista_expresiones : lista_expresiones coma expresion
 130                    | expresion

 131  lista_tipos : lista_tipos ',' tipo
 132              | lista_tipos tipo
 133              | tipo

 134  tipo : DOUBLE
 135       | LONGINT
 136       | ID
 137       | TYPEDEF ID

 138  comparador : '<'
 139             | '>'
 140             | MAYOR_IGUAL
 141             | MENOR_IGUAL
 142             | DISTINTO
 143             | '='

state 0
	$accept : . prog $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	prog  goto 3


state 1
	prog : BEGIN . END  (3)
	prog : BEGIN . cuerpo  (6)

	IF  shift 4
	END  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 16
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	id_compuesta_var  goto 29


state 2
	prog : ID . BEGIN cuerpo END  (1)
	prog : ID . cuerpo END  (2)
	prog : ID . BEGIN cuerpo  (4)
	prog : ID . cuerpo  (5)

	IF  shift 4
	BEGIN  shift 30
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 31
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	id_compuesta_var  goto 29


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then END_IF ';'  (71)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (72)
	condicion_if : IF . '(' condicion ')' cuerpo_then END_IF ';'  (73)
	condicion_if : IF . '(' ')' THEN cuerpo_then END_IF ';'  (74)
	condicion_if : IF . '(' condicion ')' THEN error END_IF ';'  (75)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then error  (76)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then END_IF  (77)
	condicion_if : IF . THEN cuerpo_then END_IF error  (78)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then cuerpo_else END_IF ';'  (79)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF  (80)
	condicion_if : IF . '(' condicion ')' THEN cuerpo_then ELSE END_IF ';'  (81)
	condicion_if : IF . '(' condicion ')' THEN ELSE cuerpo_else END_IF ';'  (82)
	condicion_if : IF . condicion THEN cuerpo_then END_IF ';'  (83)
	condicion_if : IF . '(' condicion THEN cuerpo_then END_IF ';'  (84)
	condicion_if : IF . condicion ')' THEN cuerpo_then END_IF ';'  (85)
	condicion_if : IF . '(' condicion THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (86)
	condicion_if : IF . condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (87)
	condicion_if : IF . condicion THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (88)

	THEN  shift 32
	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 41
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 44
	condicion  goto 45
	termino  goto 46
	id_compuesta_exp  goto 47


state 5
	prog : BEGIN END .  (3)

	.  reduce 3


state 6
	sentencia_print : OUTF . '(' CML ')' ';'  (56)
	sentencia_print : OUTF . '(' expresion ')' ';'  (57)
	sentencia_print : OUTF . '(' ')' ';'  (58)
	sentencia_print : OUTF . '(' expresion ')'  (59)
	sentencia_print : OUTF . '(' CML ')'  (60)
	sentencia_print : OUTF . CML ';'  (61)
	sentencia_print : OUTF . expresion ';'  (62)
	sentencia_print : OUTF . '(' error ')' ';'  (63)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	CML  shift 48
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 49
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 50
	termino  goto 46
	id_compuesta_exp  goto 47


state 7
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' factor ',' factor ']' ';'  (14)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' factor ',' factor ';'  (15)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo factor ',' factor ']' ';'  (16)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo factor ',' factor ';'  (17)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' ']' ';'  (18)
	sentencia_declaracion : TYPEDEF . ASIGNACION tipo '[' factor ',' factor ']' ';'  (19)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION '[' factor ',' factor ']' ';'  (20)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (21)
	sentencia_declaracion : TYPEDEF . STRUCT lista_tipos '(' lista_variables ',' ')' ID ';'  (22)
	sentencia_declaracion : TYPEDEF . '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (23)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ';'  (24)
	tipo : TYPEDEF . ID  (137)

	ID  shift 51
	STRUCT  shift 52
	ASIGNACION  shift 53
	'<'  shift 54
	.  error


state 8
	sentencia_ejecucion : RET . '(' expresion ')' ';'  (46)
	sentencia_ejecucion : RET . expresion ';'  (47)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 55
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 56
	termino  goto 46
	id_compuesta_exp  goto 47


state 9
	repeat : REPEAT .  (55)

	.  reduce 55


state 10
	sentencia_ejecucion : GOTO . ETIQUETA ';'  (41)
	sentencia_ejecucion : GOTO . ETIQUETA  (42)
	sentencia_ejecucion : GOTO . ';'  (43)

	ETIQUETA  shift 57
	';'  shift 58
	.  error


state 11
	invocacion_funcion : ID . '(' expresion ')'  (66)
	invocacion_funcion : ID . '(' ')'  (67)
	lista_variables : ID .  (125)
	id_compuesta_var : ID . '.' ID  (126)
	tipo : ID .  (136)

	'.'  shift 59
	'('  shift 60
	FUN  reduce 136
	ID  reduce 136
	ASIGNACION  reduce 125
	','  reduce 125


state 12
	tipo : LONGINT .  (135)

	.  reduce 135


state 13
	sentencia_ejecucion : CML .  (45)

	.  reduce 45


state 14
	tipo : DOUBLE .  (134)

	.  reduce 134


state 15
	sentencia_ejecucion : ETIQUETA .  (44)

	.  reduce 44


state 16
	prog : BEGIN cuerpo .  (6)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 6

	sentencia  goto 61
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	id_compuesta_var  goto 29


state 17
	cuerpo : sentencia .  (8)

	.  reduce 8


state 18
	sentencia : sentencia_declaracion .  (9)

	.  reduce 9


state 19
	sentencia : sentencia_ejecucion .  (10)

	.  reduce 10


state 20
	sentencia_declaracion : tipo . lista_variables ';'  (11)
	sentencia_declaracion : tipo . lista_variables  (12)
	declaracion_funcion : tipo . FUN actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion END  (26)
	declaracion_funcion : tipo . actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion END  (27)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo_funcion END  (28)
	declaracion_funcion : tipo . FUN actualizar_ambito parametro BEGIN cuerpo_funcion END  (29)
	declaracion_funcion : tipo . FUN actualizar_ambito '(' ')' BEGIN cuerpo_funcion END  (30)
	declaracion_funcion : tipo . FUN actualizar_ambito '(' parametro ')' cuerpo_funcion END  (31)
	declaracion_funcion : tipo . FUN actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion error  (32)
	declaracion_funcion : tipo . FUN actualizar_ambito '(' parametro ')' BEGIN error END  (33)

	FUN  shift 62
	ID  shift 63
	.  error

	lista_variables  goto 64
	actualizar_ambito  goto 65
	id_compuesta_var  goto 29


state 21
	asignacion : lista_variables . ASIGNACION lista_expresiones ';'  (95)
	lista_variables : lista_variables . ',' ID  (122)
	lista_variables : lista_variables . ',' id_compuesta_var  (123)

	ASIGNACION  shift 66
	','  shift 67
	.  error


state 22
	sentencia_declaracion : declaracion_funcion .  (13)

	.  reduce 13


state 23
	sentencia_ejecucion : asignacion .  (36)

	.  reduce 36


state 24
	sentencia_ejecucion : condicion_if .  (37)

	.  reduce 37


state 25
	sentencia_ejecucion : sentencia_print .  (38)

	.  reduce 38


state 26
	sentencia_ejecucion : sentencia_while .  (39)

	.  reduce 39


state 27
	sentencia_ejecucion : invocacion_funcion . ';'  (40)

	';'  shift 68
	.  error


state 28
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'  (48)
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE '(' condicion ')'  (49)
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE '(' ')' ';'  (50)
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE condicion ')' ';'  (51)
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE '(' condicion ';'  (52)
	sentencia_while : repeat . bloque_sentencia_ejecutable WHILE condicion ';'  (53)
	sentencia_while : repeat . WHILE '(' condicion ')' ';'  (54)

	BEGIN  shift 69
	WHILE  shift 70
	.  error

	bloque_sentencia_ejecutable  goto 71


state 29
	lista_variables : id_compuesta_var .  (124)

	.  reduce 124


state 30
	prog : ID BEGIN . cuerpo END  (1)
	prog : ID BEGIN . cuerpo  (4)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 72
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	id_compuesta_var  goto 29


state 31
	prog : ID cuerpo . END  (2)
	prog : ID cuerpo .  (5)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 73
	OUTF  shift 6
	TYPEDEF  shift 7
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 5

	sentencia  goto 61
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	id_compuesta_var  goto 29


state 32
	condicion_if : IF THEN . cuerpo_then END_IF error  (78)

	IF  shift 4
	BEGIN  shift 69
	OUTF  shift 6
	RET  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 74
	CML  shift 13
	ETIQUETA  shift 15
	.  error

	sentencia_ejecucion  goto 75
	lista_variables  goto 21
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	repeat  goto 28
	bloque_sentencia_ejecutable  goto 76
	cuerpo_then  goto 77
	id_compuesta_var  goto 29


state 33
	invocacion_funcion : ID . '(' expresion ')'  (66)
	invocacion_funcion : ID . '(' ')'  (67)
	factor : ID .  (114)
	id_compuesta_exp : ID . '.' ID  (127)

	'.'  shift 78
	'('  shift 60
	error  reduce 114
	THEN  reduce 114
	DISTINTO  reduce 114
	MENOR_IGUAL  reduce 114
	MAYOR_IGUAL  reduce 114
	'+'  reduce 114
	'-'  reduce 114
	'*'  reduce 114
	'/'  reduce 114
	';'  reduce 114
	','  reduce 114
	']'  reduce 114
	'<'  reduce 114
	'>'  reduce 114
	')'  reduce 114
	'='  reduce 114


state 34
	factor : LONGINT .  (116)

	.  reduce 116


state 35
	factor : HEXA .  (118)

	.  reduce 118


state 36
	factor : DOUBLE .  (120)

	.  reduce 120


state 37
	expresion : TOD . '(' ')'  (101)
	termino : TOD . '(' expresion ')'  (111)

	'('  shift 79
	.  error


state 38
	factor : '-' . LONGINT  (117)
	factor : '-' . HEXA  (119)
	factor : '-' . DOUBLE  (121)

	LONGINT  shift 80
	HEXA  shift 81
	DOUBLE  shift 82
	.  error


state 39
	termino : '*' . factor  (110)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	'-'  shift 38
	.  error

	factor  goto 83
	invocacion_funcion  goto 43
	id_compuesta_exp  goto 47


state 40
	termino : '/' . factor  (109)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	'-'  shift 38
	.  error

	factor  goto 84
	invocacion_funcion  goto 43
	id_compuesta_exp  goto 47


state 41
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then END_IF ';'  (71)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (72)
	condicion_if : IF '(' . condicion ')' cuerpo_then END_IF ';'  (73)
	condicion_if : IF '(' . ')' THEN cuerpo_then END_IF ';'  (74)
	condicion_if : IF '(' . condicion ')' THEN error END_IF ';'  (75)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then error  (76)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then END_IF  (77)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then cuerpo_else END_IF ';'  (79)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then ELSE cuerpo_else END_IF  (80)
	condicion_if : IF '(' . condicion ')' THEN cuerpo_then ELSE END_IF ';'  (81)
	condicion_if : IF '(' . condicion ')' THEN ELSE cuerpo_else END_IF ';'  (82)
	condicion_if : IF '(' . condicion THEN cuerpo_then END_IF ';'  (84)
	condicion_if : IF '(' . condicion THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (86)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 85
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 44
	condicion  goto 86
	termino  goto 46
	id_compuesta_exp  goto 47


state 42
	termino : factor .  (112)

	.  reduce 112


state 43
	factor : invocacion_funcion .  (113)

	.  reduce 113


state 44
	condicion : expresion . comparador expresion  (93)
	condicion : expresion . error expresion  (94)
	expresion : expresion . '+' termino  (96)
	expresion : expresion . '-' termino  (97)
	expresion : expresion . '+' '+' termino  (98)
	expresion : expresion . '-' '+' termino $$1  (100)

	error  shift 87
	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	'+'  shift 91
	'-'  shift 92
	'<'  shift 93
	'>'  shift 94
	'='  shift 95
	.  error

	comparador  goto 96


state 45
	condicion_if : IF condicion . THEN cuerpo_then END_IF ';'  (83)
	condicion_if : IF condicion . ')' THEN cuerpo_then END_IF ';'  (85)
	condicion_if : IF condicion . ')' THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (87)
	condicion_if : IF condicion . THEN cuerpo_then ELSE cuerpo_else END_IF ';'  (88)

	THEN  shift 97
	')'  shift 98
	.  error


state 46
	expresion : termino .  (102)
	termino : termino . '*' factor  (103)
	termino : termino . '/' factor  (104)
	termino : termino . '*' '*' factor  (105)
	termino : termino . '*' '/' factor  (106)
	termino : termino . '/' '/' factor  (107)
	termino : termino . '/' '*' factor  (108)

	'*'  shift 99
	'/'  shift 100
	error  reduce 102
	THEN  reduce 102
	DISTINTO  reduce 102
	MENOR_IGUAL  reduce 102
	MAYOR_IGUAL  reduce 102
	'+'  reduce 102
	'-'  reduce 102
	';'  reduce 102
	','  reduce 102
	'<'  reduce 102
	'>'  reduce 102
	')'  reduce 102
	'='  reduce 102


state 47
	factor : id_compuesta_exp .  (115)

	.  reduce 115


state 48
	sentencia_print : OUTF CML . ';'  (61)

	';'  shift 101
	.  error


state 49
	sentencia_print : OUTF '(' . CML ')' ';'  (56)
	sentencia_print : OUTF '(' . expresion ')' ';'  (57)
	sentencia_print : OUTF '(' . ')' ';'  (58)
	sentencia_print : OUTF '(' . expresion ')'  (59)
	sentencia_print : OUTF '(' . CML ')'  (60)
	sentencia_print : OUTF '(' . error ')' ';'  (63)

	error  shift 102
	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	CML  shift 103
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 104
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 105
	termino  goto 46
	id_compuesta_exp  goto 47


state 50
	sentencia_print : OUTF expresion . ';'  (62)
	expresion : expresion . '+' termino  (96)
	expresion : expresion . '-' termino  (97)
	expresion : expresion . '+' '+' termino  (98)
	expresion : expresion . '-' '+' termino $$1  (100)

	'+'  shift 91
	'-'  shift 92
	';'  shift 106
	.  error


state 51
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' factor ',' factor ']' ';'  (14)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' factor ',' factor ';'  (15)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo factor ',' factor ']' ';'  (16)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo factor ',' factor ';'  (17)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' ']' ';'  (18)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION '[' factor ',' factor ']' ';'  (20)
	tipo : TYPEDEF ID .  (137)

	ASIGNACION  shift 107
	FUN  reduce 137
	ID  reduce 137


state 52
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (21)
	sentencia_declaracion : TYPEDEF STRUCT . lista_tipos '(' lista_variables ',' ')' ID ';'  (22)
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '(' lista_variables ',' ')' ';'  (24)

	TYPEDEF  shift 108
	ID  shift 109
	LONGINT  shift 12
	DOUBLE  shift 14
	'<'  shift 110
	.  error

	tipo  goto 111
	lista_tipos  goto 112


state 53
	sentencia_declaracion : TYPEDEF ASIGNACION . tipo '[' factor ',' factor ']' ';'  (19)

	TYPEDEF  shift 108
	ID  shift 109
	LONGINT  shift 12
	DOUBLE  shift 14
	.  error

	tipo  goto 113


state 54
	sentencia_declaracion : TYPEDEF '<' . lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (23)

	TYPEDEF  shift 108
	ID  shift 109
	LONGINT  shift 12
	DOUBLE  shift 14
	.  error

	tipo  goto 111
	lista_tipos  goto 114


state 55
	sentencia_ejecucion : RET '(' . expresion ')' ';'  (46)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 115
	termino  goto 46
	id_compuesta_exp  goto 47


state 56
	sentencia_ejecucion : RET expresion . ';'  (47)
	expresion : expresion . '+' termino  (96)
	expresion : expresion . '-' termino  (97)
	expresion : expresion . '+' '+' termino  (98)
	expresion : expresion . '-' '+' termino $$1  (100)

	'+'  shift 91
	'-'  shift 92
	';'  shift 116
	.  error


state 57
	sentencia_ejecucion : GOTO ETIQUETA . ';'  (41)
	sentencia_ejecucion : GOTO ETIQUETA .  (42)

	';'  shift 117
	$end  reduce 42
	error  reduce 42
	IF  reduce 42
	ELSE  reduce 42
	BEGIN  reduce 42
	END  reduce 42
	END_IF  reduce 42
	OUTF  reduce 42
	TYPEDEF  reduce 42
	RET  reduce 42
	REPEAT  reduce 42
	GOTO  reduce 42
	ID  reduce 42
	LONGINT  reduce 42
	CML  reduce 42
	DOUBLE  reduce 42
	ETIQUETA  reduce 42


state 58
	sentencia_ejecucion : GOTO ';' .  (43)

	.  reduce 43


state 59
	id_compuesta_var : ID '.' . ID  (126)

	ID  shift 118
	.  error


state 60
	invocacion_funcion : ID '(' . expresion ')'  (66)
	invocacion_funcion : ID '(' . ')'  (67)

	ID  shift 33
	LONGINT  shift 34
	HEXA  shift 35
	DOUBLE  shift 36
	TOD  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 119
	.  error

	factor  goto 42
	invocacion_funcion  goto 43
	expresion  goto 120
	termino  goto 46
	id_compuesta_exp  goto 47


state 61
	cuerpo : cuerpo sentencia .  (7)

	.  reduce 7


state 62
	declaracion_funcion : tipo FUN . actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion END  (26)
	declaracion_funcion : tipo FUN . '(' parametro ')' BEGIN cuerpo_funcion END  (28)
	declaracion_funcion : tipo FUN . actualizar_ambito parametro BEGIN cuerpo_funcion END  (29)
	declaracion_funcion : tipo FUN . actualizar_ambito '(' ')' BEGIN cuerpo_funcion END  (30)
	declaracion_funcion : tipo FUN . actualizar_ambito '(' parametro ')' cuerpo_funcion END  (31)
	declaracion_funcion : tipo FUN . actualizar_ambito '(' parametro ')' BEGIN cuerpo_funcion error  (32)
	declaracion_funcion : tipo FUN . actualizar_ambito '(' parametro ')' BEGIN error END  (33)

	ID  shift 121
	'('  shift 122
	.  error

	actualizar_ambito  goto 123


state 63
	actualizar_ambito : ID .  (25)
	lista_variables : ID .  (125)
	id_compuesta_var : ID . '.' ID  (126)
